tests/ui/async-await/issues/issue-62009-2.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-62009-2.rs:6:23
   |
LL | fn main() {
   | --------- this is not `async`
LL |     (async || 2333)().await;
   |                       ^^^^^ only allowed inside `async` functions and blocks

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0728`.
